<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Entourage</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <!--  Login title animation.  -->
    
    <string name="numericE"> E </string>
    <string name="N"> N </string>
    <string name="T"> T </string>
    <string name="U"> U </string>
    <string name="R"> R </string>
    <string name="A"> A </string>
    <string name="G"> G </string>
    <string name="E"> E </string>
    
    <string name="icon_content_description"> Icon Image </string>
    
    <!--  Login View Strings  -->
    
    <string name="login_label"> Username </string>
    <string name="password_label"> Password </string>
    <string name="login_password"> Please Enter Password </string>
    <string name="login"> Login </string>
</resources>
