<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/numericE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/numericE" 
        android:layout_marginLeft="10dip"
        android:textSize="20sp"
       />
    
    
    <TextView
        android:id="@+id/N"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/N" 
        android:layout_marginLeft="10dip"
        android:textSize="20sp"
        android:layout_toRightOf="@id/numericE"
        />
    
    <TextView
        android:id="@+id/T"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_toRightOf="@id/N"
        android:textSize="20sp"
        android:text="@string/T" />
    
       
    <com.vector.entourage.IconImageview
            android:contentDescription="@string/icon_content_description"
            android:id="@+id/o_icon"
        android:layout_width="20dip"
        android:layout_height="20dip"
        android:layout_toRightOf="@id/T"
        android:textSize="20sp"
        android:layout_marginLeft="10dip"
        android:src="@drawable/o_icon" />
    
    <TextView
        android:id="@+id/U"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_toRightOf="@id/o_icon"
        android:textSize="20sp"
        android:text="@string/U" />
    
    <TextView
        android:id="@+id/R"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_toRightOf="@id/U"
        android:textSize="20sp"
        android:text="@string/R" />
    
    <TextView
        android:id="@+id/A"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_toRightOf="@id/R"
        android:textSize="20sp"
        android:text="@string/A" />
    
    <TextView
        android:id="@+id/G"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_toRightOf="@id/A"
        android:textSize="20sp"
        android:text="@string/G" />

    
    <TextView
        android:id="@+id/E"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_toRightOf="@id/G"
        android:textSize="20sp"
        android:text="@string/E" />



</RelativeLayout>
